# ChangeLog for media-gfx/drqueue
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/drqueue/ChangeLog,v 1.1 2010/01/29 15:47:55 sping Exp $

*drqueue-9999 (29 Jan 2010)
*drqueue-0.64.3-r1 (29 Jan 2010)

  29 Jan 2010; Sebastian Pipping <sping@gentoo.org>
  +drqueue-0.64.3-r1.ebuild, +files/drqueue-0.64.3-compile-flags.patch,
  +files/drqueue-0.64.3-etc-confd-drqmd,
  +files/drqueue-0.64.3-etc-confd-drqsd,
  +files/drqueue-0.64.3-etc-envd-02drqueue,
  +files/drqueue-0.64.3-etc-initd-drqmd,
  +files/drqueue-0.64.3-etc-initd-drqsd,
  +files/drqueue-0.64.3-sconstruct.patch, +drqueue-9999.ebuild,
  +metadata.xml:
  New package (fixes bug #69553)
