@@ -6,7 +6,7 @@ AUX drqueue-0.64.3-etc-initd-drqmd 557 RMD160 ae9cc4ce1fa9bf19caeddcc825c4c711cc
 AUX drqueue-0.64.3-etc-initd-drqsd 547 RMD160 ee6e959e6039f0634df647ffdaecf0767535e00b SHA1 08bc00e155d74efca7a43c6a2255741340a874a3 SHA256 2d9c4bf4b9d2f1e81196b03e85c7dd5a6be3bc2daa619e47fde49c438e782369
 AUX drqueue-0.64.3-sconstruct.patch 522 RMD160 4fe48917b88933f102cd71fc895487b537242df3 SHA1 416920c760d541cf03096dd74e8a29a951b94fa4 SHA256 cb52627a1c4cec6ef0cd8b6c4b140e81305ff7c834ac772a88c44286e9625e43
 DIST drqueue.0.64.3.tgz 336767 RMD160 a8205276e4420417e55e59df2f2a04a98641328d SHA1 bd7fc072591a8a34b43ab5041ae02b71f7f5eb55 SHA256 d26e9434b9551ca542b5fa4aaf4740b2faac55b9dca28d335913b7d065ccd127
-EBUILD drqueue-0.64.3-r1.ebuild 3492 RMD160 38d2bcd95652dd535d7a78ced0b8beb400ccf7af SHA1 7fe5c4afaece1f6667c12a952784f80eafbe8328 SHA256 d0c74b0fa80272111ba5aecbfeb0272a248576f8e0cff47bfbed1c172fbc09aa
-EBUILD drqueue-9999.ebuild 3390 RMD160 8a3514577cdc40e04af3c0463419edbe4d774f06 SHA1 29ddf8fda83d9448a8fec8c6d41c26255ffcc083 SHA256 e3d94b8b442a6e459948d79c4330efd2fe6f1e4113596d50aff316931b8f469b
-MISC ChangeLog 715 RMD160 a2d31fb6c394afa2610459045e19edb99a8ad7a9 SHA1 821dfdec1ab1b5e59ba993c01d70a02d20991838 SHA256 0ed6fa4a6a77d13cc0967a9550a0eac7cd64aa3915bc83706dc7adc1ce024f07
+EBUILD drqueue-0.64.3-r1.ebuild 3730 RMD160 2e4f67270c95ff49373c74ffe57dca1d49c81580 SHA1 7a381f336d4c2efb462b424ab0898796f9ad8348 SHA256 f49d74dca6ffc7f60c809c540f7438eef51312dd7d22d0ea2d9cfc780355ea52
+EBUILD drqueue-9999.ebuild 3628 RMD160 442abf3c0c1fe4a69f7c6e9e2828fce5fb805924 SHA1 0323ee45ecf4fe235985e90d6c50352878b622fd SHA256 1ca9aa77af161faf7fe41cca625e09e6f97bf0ec7dad8979cf0081d55f748ffc
+MISC ChangeLog 868 RMD160 0637c6b6d941b19fac6efb3d4ca4fac716ab56da SHA1 ec2aeff3db8cba92e14002615d66256b869bb985 SHA256 577b9590718ac20be85e515789205f41c8df2bf39168e64208002c963decdf11
 MISC metadata.xml 257 RMD160 04e4c6e678ba8e8ffde93f57d06a40b60f9eaa69 SHA1 e3c39bf9a25beebbe626726bb94f6e22db4fa06d SHA256 b4a209de2bfbbcc5ceab61bf458a1ee79da4c60a30e4aabf54b76e9709b56db8
