@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/drqueue
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/drqueue/ChangeLog,v 1.1 2010/01/29 15:47:55 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/drqueue/ChangeLog,v 1.2 2010/02/06 02:54:15 sping Exp $
+
+  06 Feb 2010; Sebastian Pipping <sping@gentoo.org>
+  drqueue-0.64.3-r1.ebuild, drqueue-9999.ebuild:
+  Remove drqman leftovers for USE=-X (bug #302939)
 
 *drqueue-9999 (29 Jan 2010)
 *drqueue-0.64.3-r1 (29 Jan 2010)
